// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="spacer-top"
>
  <div
    className="locations-navigator-file"
    key="0"
  >
    <div
      className="location-file"
    >
      <i
        className="location-file-circle little-spacer-right"
      />
      src/foo.js
    </div>
    <div
      className="location-file-locations"
    >
      <SingleFileLocationNavigator
        index={0}
        key="0"
        message="Do not use foo"
        onClick={[MockFunction]}
        selected={false}
      />
    </div>
  </div>
  <div
    className="locations-navigator-file"
  >
    <div
      className="location-file"
    >
      <i
        className="location-file-circle-multiple little-spacer-right"
      />
      <a
        className="location-file-more"
        href="#"
        onClick={[Function]}
      >
        issues.x_more_locations.2
      </a>
    </div>
  </div>
  <div
    className="locations-navigator-file"
    key="1"
  >
    <div
      className="location-file"
    >
      <i
        className="location-file-circle little-spacer-right"
      />
      src/bar.js
    </div>
    <div
      className="location-file-locations"
    >
      <SingleFileLocationNavigator
        index={3}
        key="3"
        message="Do not use bar"
        onClick={[MockFunction]}
        selected={false}
      />
    </div>
  </div>
</div>
`;

exports[`should render locations with no component name 1`] = `
<div
  className="spacer-top"
>
  <div
    className="locations-navigator-file"
    key="0"
  >
    <div
      className="location-file"
    >
      <i
        className="location-file-circle little-spacer-right"
      />
    </div>
    <div
      className="location-file-locations"
    >
      <SingleFileLocationNavigator
        index={0}
        key="0"
        onClick={[MockFunction]}
        selected={false}
      />
    </div>
  </div>
</div>
`;

exports[`should render with no locations 1`] = `
<div
  className="spacer-top"
/>
`;
